testdata/language-features/guard/guard02.reject.out
type error: can not unify
[32m'String[m
with
[32m'Tuple0[m

in "testdata/language-features/guard/guard02.reject.lc" (line 2, column 12):
  | True = ()
           ^^
